--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,32 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This site for Aziz Nazarqulov. You can find his projects and contact with he here."
+    />
+    <meta
+      name="keywords"
+      content="3d, models, 3d models, animation, animatsiya uzbekistan, 3d modelshik uz, 3d model yasash xizmati"
+    />
+    <meta name="author" content="Aziz Nazarqulov" />
+    <meta
+      property="og:title"
+      content="Aziz Nazrqulov's Portfolio - 3D modeller, animator and manager"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="This site for Aziz Nazarqulov. You can find his projects and contact with he here."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Aziz Nazarqulov's Portfolio - 3D modeller, animator and manager"
+    />
+    <meta
+      name="twitter:description"
+      content="This site for Aziz Nazarqulov. You can find his projects and contact with he here."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
